--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url= jdbc:mysql://localhost:3306/stockify
 spring.datasource.username=root
 spring.datasource.password=backdev
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.security.user.name=admin
+spring.security.user.password=admin
